--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,11 +2,11 @@
 @import "rouge-github";
 
 body {
-  background-color: #fff;
+  background-color: #eaeaea;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#700000;
-  font-weight:700;
+  color:#727272;
+  font-weight:300;
 }
 
 h1, h2, h3, h4, h5, h6 {
