--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,6 +4,6 @@
 {% include head-custom-google-analytics.html %}
 
 <!-- You can set your favicon here -->
-<link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.svg">
 
 <!-- end custom head snippets -->
