--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 
       {{ content }}
 
-      {% include_relative _includes/my-gallery.html %}
+      {% include my-gallery.html %}
       </section>
       <footer>
         {% if site.github.is_project_page %}
