--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 
       {{ content }}
 
-      
+      {% include image-gallery.html folder="/assets/img_gal" %}
       </section>
       <footer>
         {% if site.github.is_project_page %}
