rpass insta integration

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,13 @@ layout: default
 
 {{content}}
 
+<h1 style="text-align: center">Show Instagram Feed on your Website</h1>
+<div id="instafeed-container"></div>
+
+
+
+
+
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
