--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,16 @@
 
       {% include my_gallery.html folder="/assets/img_gal" %}
 
-
+      <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
+      <script type="text/javascript">
+        var userFeed = new Instafeed({
+          get: 'user',
+          target: "instafeed-container",
+            resolution: 'low_resolution',
+          accessToken: 'IGQVJXdXN0VllpOVNhVGNxQ2Vub2d1dGlkRWxBSk43d3U5eUtqT3R2el8yVUl6eHdod282WFl6aWhVQkI2SmFuRDU4dzA3dmFpTWdEdDVsMUFOMjRJXzRZAX0JQMHdZARk5pYmhRWWFIX3BFZAVF0dDZAreQZDZD'
+        });
+        userFeed.run();
+      </script>
       </section>
       <footer>
         {% if site.github.is_project_page %}
