insta update. my_gallery delete

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,9 @@
 
       {{ content }}
 
-      {% include my_gallery.html folder="/assets/img_gal" %}
+
+      <h1 style="text-align: center">Show Instagram Feed on your Website</h1>
+    	<div id="instafeed-container"></div>
 
       <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
       <script type="text/javascript">
