--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -191,7 +191,7 @@ strong {
 }
 
 section {
-  width:500px;
+  width:750px;
   float:right;
   padding-bottom:100px;
 }
@@ -290,7 +290,7 @@ footer {
   }
 }
 
-/*! div style */
+/*! div style
 .image-gallery {
   width: 100%;
   display: grid;
@@ -316,3 +316,4 @@ transition: all 0.3s ease-in-out;
   transform: scale(1.05);
 }
 }
+ */
