--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
       {{ content }}
 
 
-      <h1 style="text-align: center">Show Instagram Feed on your Website</h1>
+      <h1 style="text-align: center">This way UP</h1>
     	<div id="instafeed-container"></div>
 
       <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
