--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     [if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    {% include head-custom.html %}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!--  {% include head-custom.html %}
+     <  Global site tag (gtag.js) - Google Analytics ->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1EY97H2S4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
